added small change in checkDataFormat method in DataParser class